# yingdao

./: .gitignore  app_list.json  migrate_flow.py  migrate_flow_gui.py  test_login.py  test_login_xbot.py  影刀迁移 备份.py  影刀迁移.py
.github/workflows/: release.yml
tauri/: README.md  package-lock.json  package.json  vite.config.ts
tauri/src/: App.tsx  index.css  main.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: commands.rs  lib.rs
tauri/src-tauri/src/api/: auth.rs  client.rs
tauri/src-tauri/src/flow/: cloud.rs  local.rs  migrate.rs  mod.rs
tauri/src/components/: AccountDetailDialog.tsx  AddAccountDialog.tsx  ErrorBoundary.tsx  LoginPage.tsx  ReLoginDialog.tsx  SettingsPage.tsx
tauri/src/components/layout/: Layout.tsx  Sidebar.tsx  index.ts
tauri/src/components/ui/: Dock.css  Dock.tsx  Galaxy.tsx  ShinyText.css  Stepper.css  Stepper.tsx  alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  separator.tsx  toaster.tsx
tauri/src/contexts/: AuthContext.tsx  ConfigContext.tsx
tauri/src/lib/: i18n.ts  supabase.ts
备份/: migrate_flow.py  test_login.py
请求/: delete.txt  down.txt  get application list.txt  xbot Deployer.txt  xbot_login2.txt  xbot_qianyi.txt  xbot_qianyi3.txt
