[package]
name = "yingdao-manager"
version = "1.1.4"
description = "影刀流程迁移工具"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP requests
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Stream utilities
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# RSA encryption
rsa = "0.9"
base64 = "0.22"

# ZIP operations
zip = "2"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Date/time
chrono = "0.4"

# Directory traversal
walkdir = "2"

# Random number generation
rand = "0.8"

# Desktop path
dirs-next = "2.0"
